# twitch_projects

./: .gitignore  README.md  pyproject.toml
20210221_cherwell _district_council_spend/: 01 - get data from Cherwell council.ipynb  02 DATA SCIENCE.ipynb
20210228_sonnet_or_shanty/: 01 - get data.ipynb  02 - sonnet or shanty.ipynb
20210307_jazz/: Key signature investigation.ipynb
20210621_chess/: Chess dot com data analysis.ipynb  chess_com_games_2021-06-21.pgn
20210726_chess_2/: 01 - parse PGN data.ipynb  02 - scrape opening lines.ipynb  03 - Analyse openings.ipynb  openings.csv  pgn_games_parsed.csv
20240108_football_caps/: Find most-capped players who played in Hungary.ipynb  output.html
20240701_football_top_scorers/: Top international scorers (weighted).ipynb
20240707_top_scorers_continued/: Top international scorers (weighted).ipynb
20241108_send_a_text_like_kelly_rowland/: README.md  Test SMS.ipynb
20241207_spotify_wrapped/: Investigate streaming history.ipynb  StreamingHistory0.json  environment.yml  wrapped.py
20241228_titanic_speedrun/: 01 Scrape Titanic data.ipynb  02 Compile competition entry 1.ipynb  02 Compile competition entry 2.ipynb  pyproject.toml  titanic.py
20241228_titanic_speedrun/data/: passengers.parquet  test_submission_1.csv  test_submission_2.csv
20250105_when_is_bins/: 01 Get all postcodes.ipynb  02 Test getting bin day for one postcode.ipynb  03 Get all bin days.ipynb  04 Get postcode GeoJSONs.ipynb  05 Merge geojson and bin day data.ipynb  bin_helpers.py  pyproject.toml
20250302_wetherspoons_speedrun/: pyproject.toml  (+1 more)
(+13 files in other folders)
