[tool.poetry]
name = "twitch-projects"
version = "0.1.0"
description = ""
authors = ["David Asboth <davidasboth@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "twitch_projects"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
lxml = "^5.1.0"
pandas = "^2.1.4"
requests = "^2.31.0"
bs4 = "^0.0.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
